# health-determinants-kg

./: .gitignore  README.md  pyproject.toml
etl/: airquality_loader.py  aquastat_loader.py  download_fao.py  download_undp.py  download_who_airquality.py  download_worldbank.py  hdi_loader.py  helpers.py  loader.py  worldbank_loader.py
mcp_server/: config.yaml  server.py
schema/: health_determinants_kg.cypher
tests/: test_airquality_loader.py  test_aquastat_loader.py  test_hdi_loader.py  test_helpers.py  test_worldbank_loader.py
