[project]
name = "health-determinants-kg"
version = "0.1.0"
description = "Health determinants knowledge graph — World Bank WDI, WHO Air Quality, FAO AQUASTAT, UNDP HDI on Samyama"
requires-python = ">=3.10"
dependencies = [
    "samyama>=0.6.0",
    "requests>=2.31",
    "rich>=13.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["etl*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
